--- a/MODAMSWeb/Views/Shared/layouts/_footer.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_footer.cshtml
@@ -1,12 +1,17 @@
-			
-			<!-- FOOTER -->
-			<footer class="footer">
-				<div class="container">
-					<div class="row align-items-center flex-row-reverse">
-						<div class="col-md-12 col-sm-12 text-start">
-							<img src="~/assets/images/brand/unops_footer_logo.png"> | Somalia Country Office (SOCO)
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- FOOTER END -->
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="container">
+        <div class="row align-items-left flex-row-reverse">
+            <div class="col-md-12 col-sm-12 text-start">
+                <span class="float-left">
+                    <img src="~/assets/images/brand/EU_Small3.png"> Funded by European Union
+                </span>
+                <span class="float-end">
+                    <img src="~/assets/images/brand/logo_small.png">
+                </span>
+            </div>
+            
+        </div>
+    </div>
+</footer>
+<!-- FOOTER END -->
