--- a/MODAMSWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,43 +6,42 @@
 }
 
 <!-- CONTAINER OPEN -->
-<div class="col col-login mx-auto text-center">
-    <a asp-area="" asp-page="/Index">
-        <img src="~/assets/images/brand/logo.png" class="header-brand-img" alt="">
-    </a>
-</div>
+
 <div class="container-login100">
     <div class="wrap-login100 p-0">
         <div class="card-body">
+            <span class="login100-form-title pb-2">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="">
+            </span>
+            <div class="text-center pb-3">
+                <p class="text-blue mb-0" style="font-size:small;">Account Registration</p>
+            </div>
             <form class="login100-form validate-form" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">           
-                <span class="login100-form-title">
-                    Registration
-                </span>
+                <div asp-validation-summary="ModelOnly" class="text-danger text-center text-wrap" role="alert"></div>
                 <div class="wrap-input100 validate-input" data-bs-validate="Valid email is required: ex@abc.xyz">
-                    <input class="input100" type="text" name="email" placeholder="Email">
+                    <input asp-for="Input.Email" class="input100" placeholder="Email" />
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-email" aria-hidden="true"></i>
                     </span>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
+                    <input asp-for="Input.Password" class="input100" type="password" placeholder="Password" />
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-lock" aria-hidden="true"></i>
                     </span>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
-                    <input class="input100" type="password" name="confirmpass" placeholder="Confirm Password">
+                    <input asp-for="Input.ConfirmPassword" class="input100" type="password" placeholder="Confirm Password" />
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-lock" aria-hidden="true"></i>
                     </span>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
-                <label class="custom-control custom-checkbox mt-4">
-                    <input type="checkbox" class="custom-control-input">
-                    <span class="custom-control-label">Agree the <a asp-area="" asp-page="/Terms/Index">terms and policy</a></span>
-                </label>
                 <div class="container-login100-form-btn">
                     <button type="submit" class="login100-form-btn btn-primary">
                         Register
@@ -50,78 +49,19 @@
                 </div>
                 <div class="text-center pt-3">
                     <p class="text-dark mb-0">Already have account?<a asp-area="" asp-page="/Login/Index" class="text-primary ms-1">Sign In</a></p>
+                
                 </div>
             </form>
         </div>
         <div class="card-footer">
-            <div class="col-md-12 col-sm-12 text-center">
-                <img src="~/assets/images/brand/unops_footer_logo.png">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
+
         </div>
-    </div>
-</div>
-<!-- CONTAINER CLOSED -->
-
-
-
-@*<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
     </div>
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
