Implementation of Identity Completed

--- a/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,38 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    Layout = "_Layout1";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="col col-login mx-auto text-center">
+    @*<a asp-area="" asp-page="/Index" class="text-center">
+    <img src="~/assets/images/brand/ams.png" class="header-brand-img" alt="">
+    </a>*@
+</div>
+<div class="container-login100">
+    <div class="wrap-login100 p-0">
+        <div class="card-body">
+            <span class="login100-form-title">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
+                <span>Forgot Password</span>
+            </span>
+            <span class="text-muted pb-5" style="font-size:small;">
+                A confirmation email has been sent to your address!
+            </span>
+            <br /><br />
+            <div class="text-center pt-3">
+                <p class="text-dark mb-0">Back to <a href="Login" class="text-primary ms-1">Sign in</a></p>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
