--- a/MODAMSWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="text-end pt-1">
-                    <p class="mb-0"><a asp-area="Identity" asp-page="Account/ForgotPassword/Index" class="text-primary ms-1">Forgot Password?</a></p>
+                    <p class="mb-0"><a asp-area="Identity" asp-controller="Account" asp-action="ForgotPassword" class="text-primary ms-1">Forgot Password?</a></p>
                 </div>
                 <div class="container-login100-form-btn">
                     <button type="submit" class="login100-form-btn btn-primary">
