--- a/MODAMSWeb/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,34 +1,61 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    Layout = "_Layout1";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Reset your password.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <input asp-for="Input.Code" type="hidden" />
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="col col-login mx-auto text-center">
+    @*<a asp-area="" asp-page="/Index" class="text-center">
+    <img src="~/assets/images/brand/ams.png" class="header-brand-img" alt="">
+    </a>*@
+</div>
+<div class="container-login100">
+    <div class="wrap-login100 p-0">
+        <div class="card-body">
+            <span class="login100-form-title">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
+                <span>Reset Password</span>
+            </span>
+
+            <span class="text-muted pb-5" style="font-size:small;">Enter the email address registered on your account</span>
+            <br /><br />
+            <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
+            <form class="login100-form validate-form" method="post">
+                <input asp-for="Input.Code" type="hidden" />
+                <div class="wrap-input100 validate-input" data-bs-validate="Valid email is required: ex@abc.xyz">
+                    <input asp-for="Input.Email" class="input100" placeholder="Email">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="zmdi zmdi-email" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
+                    <input asp-for="Input.Password" class="input100" placeholder="Password">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="zmdi zmdi-lock" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
+                    <input asp-for="Input.ConfirmPassword" class="input100" placeholder="Confirm Password">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="zmdi zmdi-lock" aria-hidden="true"></i>
+                    </span>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger pt-2"></span>
+                </div>
+                
+                <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
+            </form>
+            <div class="text-center pt-3">
+                <p class="text-dark mb-0">Go back to ?<a href="Login" class="text-primary ms-1">Sign in</a></p>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your password." />
-                <label asp-for="Input.Password" class="form-label"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </div>
+        <div class="card-footer">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your password." />
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
-        </form>
+        </div>
     </div>
 </div>
 
