--- a/MODAMSWeb/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,29 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    Layout = "_Layout1";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="container-login100">
+    <div class="wrap-login100 p-0">
+        <div class="card-body">
+            <span class="login100-form-title">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
+                <span>Reset Password</span>
+            </span>
+            <span class="text-muted pb-5" style="font-size:small;">
+                Password Reset was successful, please click the button below to sign in to your account!
+            </span>
+            <br /><br />
+            <div class="text-center pt-3">
+                Click here to <a href="Login" class="text-primary ms-1">Sign in</a>
+                <br /><br />
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+            </div>
+        </div>
+    </div>
+</div>
