--- a/MODAMSWeb/Views/Shared/_Layout1.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout1.cshtml
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="~/assets/images/brand/favicon.ico" />
 
     <!-- TITLE -->
-    <title>Asset Management System UNOPS</title>
+    <title>Asset Management System (MOD)</title>
 
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="~/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
