--- a/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,23 +1,50 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
+    Layout = "_Layout1";
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="col col-login mx-auto text-center">
+    @*<a asp-area="" asp-page="/Index" class="text-center">
+    <img src="~/assets/images/brand/ams.png" class="header-brand-img" alt="">
+    </a>*@
+</div>
+<div class="container-login100">
+    <div class="wrap-login100 p-0">
+        <div class="card-body">
+            <span class="login100-form-title">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
+                <span>Forgot Password</span>
+            </span>
+            
+            <span class="text-muted pb-5" style="font-size:small;">Enter the email address registered on your account</span>
+            <br /><br />    
+            <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
+
+            <form id="account" class="login100-form validate-form" method="post">
+                <div class="wrap-input100 validate-input" data-bs-validate="Valid email is required: ex@abc.xyz">
+                    <input asp-for="Input.Email" class="input100" placeholder="Email">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="zmdi zmdi-email" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="container-login100-form-btn">
+                    <button type="submit" class="login100-form-btn btn-primary">
+                        Reset Password
+                    </button>
+                </div>
+                <div class="text-center pt-3">
+                    <p class="text-dark mb-0">Not a member?<a href="Register" class="text-primary ms-1">Register</a></p>
+                </div>
+            </form>
+        </div>
+        <div class="card-footer">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
+        </div>
     </div>
 </div>
 
