modifications in Identity

--- a/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -15,11 +15,12 @@
         <div class="card-body">
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
-                <span>Forgot Password</span>
+                <span class="text-blue mb-0" style="font-size:small;">Reset Password</span>
             </span>
-            
+
+
             <span class="text-muted pb-5" style="font-size:small;">Enter the email address registered on your account</span>
-            <br /><br />    
+            <br /><br />
             <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
 
             <form id="account" class="login100-form validate-form" method="post">
